# project1-236

./: BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  CommaAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  EOFAutomaton.cpp  EOFAutomaton.h  FactsAutomaton.cpp  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  Interpreter.cpp  Interpreter.h  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Q_MarkAutomaton.h  QueriesAutomaton.cpp  Relation.cpp  Relation.h  Right_ParenAutomaton.h  Rule.cpp  Rule.h  RulesAutomaton.cpp  SchemesAutomaton.cpp  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  (+7 more)
Lab4PassOffCases/4-80/: inputa.txt
__MACOSX/: ._Lab2PassOffCases
__MACOSX/Lab2PassOffCases/: ._2-80
__MACOSX/Lab2PassOffCases/2-100/: ._answer0.txt  ._input0.txt
__MACOSX/Lab2PassOffCases/2-80/: ._answer4.txt  ._answer5.txt  ._answer6.txt  ._answer7.txt  ._input0.txt  ._input1.txt  ._input2.txt  ._input3.txt  ._input4.txt  ._input5.txt  ._input6.txt  ._input7.txt
